RESOLVED FIXED146411
[Streams API] Synced bad strategy test with reference implementation
https://bugs.webkit.org/show_bug.cgi?id=146411
Summary [Streams API] Synced bad strategy test with reference implementation
Xabier Rodríguez Calvar
Reported 2015-06-29 10:23:53 PDT
[Streams API] Synced bad strategy test with reference implementation
Attachments
Patch (7.44 KB, patch)
2015-06-29 10:36 PDT, Xabier Rodríguez Calvar
no flags
Xabier Rodríguez Calvar
Comment 1 2015-06-29 10:36:05 PDT
Created attachment 255758 [details] Patch Brought latest changes from bad-strategies and fixed new test
WebKit Commit Bot
Comment 2 2015-06-30 02:28:44 PDT
Comment on attachment 255758 [details] Patch Clearing flags on attachment: 255758 Committed r186112: <http://trac.webkit.org/changeset/186112>
WebKit Commit Bot
Comment 3 2015-06-30 02:28:47 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.