[Streams API] Synced bad strategy test with reference implementation https://bugs.webkit.org/show_bug.cgi?id=146411

Reviewed by Darin Adler.

Source/WebCore:

Current tests cover the case.

* bindings/js/ReadableJSStream.cpp:
(WebCore::ReadableJSStream::retrieveChunkSize): Check for negative size then running the JavaScript function.

LayoutTests:

* streams/reference-implementation/bad-strategies-expected.txt:
* streams/reference-implementation/bad-strategies.html: There are three tests that are merged into one and a
fourth check is added. Updated expectations accordingly.


Canonical link: https://commits.webkit.org/164542@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@186112 268f45cc-cd09-0410-ab3c-d52691b4dbfc